--- a/charts/jenkins-x/jenkins-x-platform.yml
+++ b/charts/jenkins-x/jenkins-x-platform.yml
@@ -1,2 +1,2 @@
-gitUrl: https://github.com/jenkins-x/jenkins-x-platform
-version: 2.0.2387
+gitUrl: https://github.com/it-beyondit/jenkins-x-platform
+version: beyondit
