--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -97,9 +97,9 @@ dependencies:
 - host: github.com
   owner: jenkins-x
   repo: jenkins-x-platform
-  url: https://github.com/jenkins-x/jenkins-x-platform
-  version: 2.0.2387
-  versionURL: https://github.com/jenkins-x/jenkins-x-platform/releases/tag/v2.0.2387
+  url: https://github.com/it-beyondit/jenkins-x-platform
+  version: beyondit
+  versionURL: https://github.com/it-beyondit/jenkins-x-platform/releases/tag/beyondit
 - host: github.com
   owner: jenkins-x-charts
   repo: jx-build-templates
